# 19.19

./: CMakeLists.txt  README.md  main.c
libs/algorithms/tasks/: convert_float_numbers.h  filter_words.h  get_best_team.h  longest_word_in_string.h  rearrange_numbers.h  remove_true_polynomial.h  transpose_matrix.h  transpose_non_symmetric_matrix.h  update_product.h  values_of_expressions.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/string/: string_.c  string_.h
